--- a/MauiAdvices.Application/MauiAdvices.Application.csproj
+++ b/MauiAdvices.Application/MauiAdvices.Application.csproj
@@ -4,17 +4,15 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <RootNamespace>MauiAdvices.Application</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
-      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
-      <PackageReference Include="System.Net.Http" Version="4.3.4" />
+      <Folder Include="Commands\" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\MauiAdvices.Infrastructure\MauiAdvices.Infrastructure.csproj" />
-      <ProjectReference Include="..\MauiAdvices.Interactors\MauiAdvices.Interactors.csproj" />
     </ItemGroup>
 
 </Project>
