--- a/MauiAdvices.Infrastructure/MauiAdvices.Infrastructure.csproj
+++ b/MauiAdvices.Infrastructure/MauiAdvices.Infrastructure.csproj
@@ -7,11 +7,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.10" />
+        <ProjectReference Include="..\MauiAdvices.Core\MauiAdvices.Core.csproj"/>
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\MauiAdvices.Core\MauiAdvices.Core.csproj" />
+      <PackageReference Include="LiteDB" Version="5.0.21" />
+      <PackageReference Include="LiteDB.Async" Version="0.1.8" />
+      <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
     </ItemGroup>
 
 </Project>
